infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trading-sto
spec:
  selector:
    app: trading-sto
  ports:
  - name: web
    port: 80
    targetPort: 3000
  - name: backend
    port: 3001
    targetPort: 3001
  type: LoadBalancer
